fix(design): Fix design on mobile

--- a/assets/css/partials/_elements.scss
+++ b/assets/css/partials/_elements.scss
@@ -30,6 +30,10 @@
                 margin: 0 2.4rem;
             }
 
+            .navbar-item:last-child {
+                margin-right: 0;
+            }
+
             .navbar-item.active {
                 font-weight: 600;
             }
@@ -88,11 +92,17 @@
         display: flex;
         justify-content: center;
         align-items: stretch;
+        flex-direction: column;
         margin-top: 8rem;
+        padding: 0 3rem 0 3rem;
+    }
+
+    .project:first-child {
+        margin-top: 0;
     }
 
         .project-image-wrapper {
-            width: 42%;
+            width: 100%;
             box-shadow: 0px 0px 6px #E5E5E5;
         }
 
@@ -102,8 +112,8 @@
             }
 
         .project-info-wrapper {
-            width: 58%;
-            padding-left: 6rem;
+            width: 100%;
+            padding-top: 3rem;
             position: relative;
         }
 
@@ -116,10 +126,7 @@
                 .project-info-line {
                     width: 0.6rem;
                     border-radius: 2rem;
-                }
-
-                .project-info {
-                    padding-left: 2rem;
+                    display: none;
                 }
 
                     .project-title {
@@ -194,6 +201,39 @@
         padding: 2rem 0;
     }
 
+        .contact-footer span {
+            display: block;
+            padding: 1rem 0;
+            @include font-size(2, 1.25);
+            font-weight: 600;
+        }
+
+
+@media #{$bp-sm} {
+    
+    .project {
+        flex-direction: row;
+        padding: 0;
+    }
+    
+        .project-image-wrapper {
+            width: 48%;
+        }
+
+        .project-info-wrapper {
+            width: 58%;
+            padding-left: 6rem;
+            padding-top: 0;
+        }
+
+            .project-info-line {
+                display: block;
+            }
+
+            .project-info {
+                padding-left: 2rem;
+            }
+    
     .contact-footer {
         display: flex;
         justify-content: space-between;
@@ -203,6 +243,9 @@
     }
 
         .contact-footer span {
-            @include font-size(2, 1.25);
-            font-weight: 600;
+            display: inline-block;
+            padding: 0;
         }
+        
+
+}
